--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,44 +4,23 @@
 <head>
     <%- include('partials/layouts/head') %>
 
-        <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-
         <%- include('partials/layouts/styles') %>
 </head>
 
 <body>
-    <div class="admin-container">
-        <div class="admin-content">
-            <div class="admin-sidebar">
-                <div class="admin-sidebar-header">
-                    <p class="admin-title">Administrator</p>
+    <div class="admin-page">
+        <div class="container">
+            <div class="header-top">
+                <div class="nav-top">
+                    <div class="bar-top">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+                    <div class="logo-top">
+                        <p class="brand">Adminstrator</p>
+                    </div>
                 </div>
-                <div class="admin-sidebar-body">
-                    <div class="admin-menu-list">
-                        <a href="" class="admin-menu-link">
-                            <p><i class="fa fa-home" aria-hidden="true"></i> Trang chủ Admin</p>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                        <a href="" class="admin-menu-link">
-                            <p><i class="fa fa-bars" aria-hidden="true"></i> Quản trị giao diện</p>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                        <a href="" class="admin-menu-link">
-                            <p><i class="fa fa-money" aria-hidden="true"></i> Quản trị thông tin</p>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                        <a href="" class="admin-menu-link">
-                            <p><i class="fa fa-paper-plane" aria-hidden="true"></i> Seo Website</p>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                        <a href="" class="admin-menu-link">
-                            <p><i class="fa fa-user" aria-hidden="true"></i> Quản lý User</p>
-                            <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="admin-log-out">
-                        <a href="/logout" class="link-log-out">Đăng xuất</a>
-                    </div>
+                <div class="menu-top">
+                    <%- include('partials/layouts/admin-sidebar.ejs')  %> 
                 </div>
             </div>
             <div class="admin-form">
@@ -49,8 +28,11 @@
                     <div class="form-find">
                         <input id="search-in-table" type="text" placeholder="Tìm kiếm">
                     </div>
+                    <div class="box-btn">
+                        <a href="#cate_6" style="color: #333;"><i class="fa fa-plus" aria-hidden="true"></i> Thêm User</a>
+                    </div>
                 </div>
-                <div class="table-box table-responsive-sm">
+                <div class="box-table">
                     <table class="">
                         <thead>
                             <tr>
@@ -64,25 +46,79 @@
                             
                             <% user.forEach(item => { %>
                                 <tr>
-                                    <td>
-                                        <%= item['TENNHANVIEN'] %></td>
-                                    <td>
+                                    <th>
+                                        <%= item['TENNHANVIEN'] %></th>
+                                    <th>
                                         <%= item['USERNAME'] %>
-                                    </td>
-                                    <td>
+                                    </th>
+                                    <th>
                                         <%= item['VAITRO'] %>
-                                    </td>
-                                    <td>
-                                        <a href="/admin/user/<%= item['USERNAME'] %>/info">
+                                    </th>
+                                    <th>
+                                        <a href="/admin/user/<%= item['USERNAME'] %>/detail/role">
                                             <i class="fas fa-user-cog"></i>
                                         </a>
-                                    </td>
+                                    </th>
                                 </tr>
                             <% }) %> 
                             
                         </tbody>
                     </table>
 
+                </div>
+            </div>
+            <div class="categories-6" id="cate_6">
+                <div class="box-table">
+                    <form action="/admin/user/add" method="post">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Username</th>
+                                    <th>Họ và tên</th>
+                                    <th>Đơn vị làm việc</th>
+                                    <th>Vai trò</th>
+                                    <th>Thêm</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>
+                                        <div class="item-form">
+                                            <input type="text" placeholder="username" name="addUName" id="addUName">
+                                            <label for="addUName"></label>
+                                        </div>
+                                    </th>
+                                    <th>
+                                        <div class="item-form">
+                                            <input type="text" placeholder="Lê Văn A" name="addName" id="addName">
+                                            <label for="addName"></label>
+                                        </div>
+                                    </th>
+                                    <th>
+                                        <div class="item-form">
+                                            <select name="addDv" id="addDv">
+                                                <% dv.forEach(item => { %>
+                                                    <option value="<%= item['IDDONVI'] %>"><%= item['TENDONVI'] %></option>
+                                                   <% }) %>
+                                            </select>
+                                        </div>
+                                    </th>
+                                    <th>
+                                        <div class="item-form">
+                                            <select name="addVt" id="addVt">
+                                                <% vt.forEach(item => { %>
+                                                 <option value="<%= item['name'] %>"><%= item['name'] %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                    </th>
+                                    <th>
+                                        <button type="submit"><i class="fa fa-plus" aria-hidden="true"></i> Thêm</button>
+                                    </th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </form>
                 </div>
             </div>
         </div>
