--- a/views/finance-page.ejs
+++ b/views/finance-page.ejs
@@ -102,7 +102,7 @@
                                             <th><%= month %></th>
                                             <th><%= year %></th>
                                             <th><%= item['SONGAY'] %></th>
-                                            <th><span>VNĐ</span></th>
+                                            <th><%= item['LUONG'] %><span style="margin-left: 8px;">VNĐ</span></th>
                                             <th><a href="/finance/employee/<%= item['IDNHANVIEN'] %>" class="btn-link"><i class="fa fa-calculator" aria-hidden="true"></i> <span>Thống kê</span></a></th>
                                         </tr>
                                     <% }) %>
