--- a/views/role-column.ejs
+++ b/views/role-column.ejs
@@ -48,7 +48,7 @@
                 </div>
                 <div class="main-body">
                     <div class="header">
-                        <p class="title">Role Privilege</p>
+                        <p class="title">Column Privilege</p>
                     </div>
                     <% if (Rtype == 2) { %>
                         <div class="container-check-box-item">
