--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -2056,6 +2056,7 @@ $color_primary_b: #08974b;
                     }
                     .menu-list {
                         .menu-item {
+                            display: block;
                             .menu-link {
                                 color: $color_primary;
                                 font-size: 20px;
@@ -2071,9 +2072,45 @@ $color_primary_b: #08974b;
                                 }
                             }
                         }
+                        #audit {
+                            cursor: pointer;
+                            position: relative;
+                            .menu-drop {
+                                position: absolute;
+                                opacity: 0;
+                                width: 100%;
+                                background-color: $color_primary;
+                                z-index: 0;
+                                left: -100%;
+                                top: -32px;
+                                transition: 0.2s;
+                                .menu-drop-link {
+                                    display: block;
+                                    padding: 16px 0;
+                                    text-align: center;
+                                    font-size: 20px;
+                                    color: #fff;
+                                    transition: 0.2s;
+                                    border: 1px solid $color_primary;
+                                    &:hover {
+                                        background-color: #fff;
+                                        color: $color_primary;
+                                    }
+                                }
+                            }
+                            &:hover {
+                                .menu-drop {
+                                    opacity: 1;
+                                    left: 98%;
+                                }
+                            }
+                        }
+                        
                     }
                     .btn-back {
                         margin: 32px auto;
+                        position: relative;
+                        z-index: 1000;
                         display: block;
                         text-align: center;
                         padding: 10px 0;
@@ -2407,16 +2444,19 @@ $color_primary_b: #08974b;
                                 border: 1px solid #dadada;
                                 color: $color_primary;
                                 &:nth-child(1) {
-                                    width: 40%;
+                                    width: 25%;
                                 }
                                 &:nth-child(2) {
-                                    width: 25%;
+                                    width: 20%;
                                 }
                                 &:nth-child(3) {
-                                    width: 25%;
+                                    width: 15%;
                                 }
                                 &:nth-child(4) {
-                                    width: 10%;
+                                    width: 25%;
+                                }
+                                &:nth-child(5) {
+                                    width: 15%;
                                 }
                             }
                         }
@@ -2429,15 +2469,18 @@ $color_primary_b: #08974b;
                                 color: #333;
                                 font-size: 14px;
                                 &:nth-child(1) {
-                                    width: 40%;
+                                    width: 25%;
                                 }
                                 &:nth-child(2) {
-                                    width: 25%;
+                                    width: 20%;
                                 }
                                 &:nth-child(3) {
-                                    width: 25%;
+                                    width: 15%;
                                 }
                                 &:nth-child(4) {
+                                    width: 25%;
+                                }
+                                &:nth-child(5) {
                                     width: 10%;
                                     a {
                                         color: $color_primary;
@@ -2549,6 +2592,109 @@ $color_primary_b: #08974b;
                                     &:hover {
                                         background-color: $color_primary_b;
                                     }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Audit page
+.audit-page {
+    .body {
+        display: block !important;
+        .header {
+            form {
+                display: flex;
+                width: 70%;
+                margin: 32px auto;
+                align-items: flex-end;
+                justify-content: center;
+                .box-form {
+                    display: flex;
+                    .form-item {
+                        margin-right: 16px;
+                        .title {
+                            color: $color_primary;
+                            padding: 8px 0;
+                            font-weight: bolder;
+                            font-size: 20px;
+                        }
+                        input {
+                            border: 1px solid #dadada;
+                            padding: 14px;
+                        }
+                        select {
+                            border: 1px solid #dadada;
+                            padding: 15px 16px;
+                            width: 200px;
+                        }
+                    }
+                    
+                }
+                .box-btn {
+                    .btn-submit {
+                        border: 1px solid $color_primary;
+                        background-color: $color_primary;
+                        color: #fff;
+                        width: 150px;
+                        padding: 16px 0;
+                        cursor: pointer;
+                        transition: 0.2s;
+                        &:hover {
+                            background-color: $color_primary_b;
+                        }
+                    }
+                }
+            }
+        }
+        .main {
+            padding: 0 32px 32px;
+            .box-table {
+                height: 400px;
+                overflow-y: scroll;
+                table {
+                    border-collapse: collapse;
+                    width: 100%;
+                    //border: 1px solid #dadada;
+                    thead {
+                        tr {
+                            th {
+                                padding: 16px;
+                                border: 1px solid #dadada;
+                                color: $color_primary;
+                                &:nth-child(1) {
+                                    width: 15%;
+                                }
+                                &:nth-child(2) {
+                                    width: 10%;
+                                }
+                                &:nth-child(3) {
+                                    width: 10%;
+                                }
+                                &:nth-child(4) {
+                                    width: 15%;
+                                }
+                                &:nth-child(5) {
+                                    width: 20%;
+                                }
+                                &:nth-child(6) {
+                                    width: 30%;
+                                }
+                            }
+                        }
+                    }
+                    tbody {
+                        tr {
+                            td{
+                                border: 1px solid #dadada;
+                                p {
+                                    font-size: 13px;
+                                    display: block;
+                                    padding: 8px;
                                 }
                             }
                         }
