--- a/views/partials/layouts/admin-sidebar.ejs
+++ b/views/partials/layouts/admin-sidebar.ejs
@@ -11,15 +11,25 @@
         </li>
         <li class="menu-item">
             <a href="/admin/user" class="menu-link">
-                <i class="fas fa-tasks    "></i>
+                <i class="fas fa-users    "></i>
                 <span>Quản lý User</span>
             </a>
         </li>
         <li class="menu-item">
             <a href="/admin/role" class="menu-link">
-                <i class="fas fa-tasks    "></i>
+                <i class="fas fa-project-diagram    "></i>
                 <span>Quản lý Role</span>
             </a>
+        </li>
+        <li class="menu-item" id="audit" >
+            <p class="menu-link">
+                <i class="fas fa-eye    "></i>
+                <span>Quản lý Audit</span>
+            </p>
+            <div class="menu-drop">
+                <a href="/admin/audit/standand" class="menu-drop-link">Standand Auditing</a>
+                <a href="/admin/audit/fga" class="menu-drop-link">FGA Auditing</a>
+            </div>
         </li>
     </ul>
     <a href="/logout" class="btn-back">Đăng xuất</a>
