--- a/views/user-column.ejs
+++ b/views/user-column.ejs
@@ -54,7 +54,7 @@
                 </div>
                 <div class="main-body">
                     <div class="header">
-                        <p class="title">Role Privilege</p>
+                        <p class="title">Column Privilege</p>
                     </div>
                     <% if (type == 3) { %>
                         <div class="container-check-box-item">
