--- a/views/user.ejs
+++ b/views/user.ejs
@@ -38,6 +38,7 @@
                             <tr>
                                 <th>Tên nhân viên</th>
                                 <th>Tên tài khoản</th>
+                                <th>Mã nhân viên</th>
                                 <th>Vai trò</th>
                                 <th>Cài đặt</th>
                             </tr>    
@@ -50,6 +51,9 @@
                                         <%= item['TENNHANVIEN'] %></th>
                                     <th>
                                         <%= item['USERNAME'] %>
+                                    </th>
+                                    <th>
+                                        <%= item['IDNHANVIEN'] %> 
                                     </th>
                                     <th>
                                         <%= item['VAITRO'] %>
