--- a/views/reception-page.ejs
+++ b/views/reception-page.ejs
@@ -74,7 +74,7 @@
                                         <th>Địa chỉ</th>
                                         <th>Số điện thoại</th>
                                         <th>Khám bệnh</th>
-                                        <th>Xóa bệnh nhân</th>
+                                        <th>Hồ sơ khám bệnh</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -86,7 +86,7 @@
                                             <th><%= item['DIACHI'] %></th>
                                             <th><%= item['SDT'] %> </th>
                                             <th><button><a href="/reception/patient/<%= item['IDBENHNHAN'] %>"><i class="fa fa-plus" aria-hidden="true"></i><span>Thêm</span></a></button></th>
-                                            <th><button><a href="/reception/patient/<%= item['IDBENHNHAN'] %>/delete"><i class="fas fa-trash-alt    "></i><span>Xóa</span></a></button></th>
+                                            <th><button><a style="color: #fff;" href="/reception/patient/<%= item['IDBENHNHAN'] %>/hosokhambenh"><i class="fas fa-eye    "></i><span>Xêm</span></a></button></th>
                                         </tr>
                                     <% }) %>
                                 </tbody>
